@@ -6,6 +6,8 @@ version 0.73cvs:
 		* compatable with old logs
 		* hopefully fixes segfault in viewing logs
 	* Fix several Jabber bugs
+	* The border on the close buttons on inactive tabs are no longer shown,
+	  thanks to a fix used by Galeon.
 	* German translation updated (Bjoern Voigt)
 
 version 0.72 (10/31/2003):
